k8s-clusters/ingress/identity/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nginx
            pathType: prefix
            backend:
              service: 
                name: nginxn
                port:
                  number: 80
          - path: /nginx-color
            pathType: prefix
            backend:
              service: 
                name: nginxc
                port:
                  number: 80
          - path: /nginx-m
            pathType: Prefix
            backend:
              service: 
                name: nginxm
                port:
                  number: 80
